--- a/Portfolio.html
+++ b/Portfolio.html
@@ -65,15 +65,15 @@
             </div>
           </div>
         </div>
-        <!-- Additional Hypothetical Projects -->
-        <div class="col-md-6 mb-4">
+                <div class="col-md-6 mb-4">
           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title">E-Commerce UI</h5>
-              <p class="card-text">Designed and implemented a shopping interface with Bootstrap and JavaScript.</p>
+              <h5 class="card-title">C# Package Express</h5>
+              <p class="card-text">Created a simple C# Console application that simulates a shipping quote system.</p>
             </div>
           </div>
         </div>
+        <!-- Additional Hypothetical Projects -->
         <div class="col-md-6 mb-4">
           <div class="card h-100">
             <div class="card-body">
